cmake_minimum_required(VERSION 3.6)
#cmake_policy(SET CMP0043 OLD)
project(ece1782)

set(platform x64)

set(CMAKE_SUPPRESS_REGENERATION ON)

set(TOP_SRCDIR ${PROJECT_SOURCE_DIR})
set(TOP_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/../thirdpart)

include_directories(AFTER ${TOP_SRCDIR}/include)
include_directories(AFTER ${TOP_INCLUDE_PATH}/libxml2/include)
include_directories(AFTER ${TOP_INCLUDE_PATH}/zlib/include)
include_directories(AFTER ${TOP_INCLUDE_PATH}/pthread/include)
include_directories(AFTER ${TOP_INCLUDE_PATH}/tcl/include)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /MP /W3 /openmp ")

#add_definitions(/D_CONSOLE)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS UNICODE)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS _UNICODE)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS _CONSOLE)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS WIN64)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS $<$<CONFIG:Debug>:_DEBUG>)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS PSAPI_VERSION=1)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS $<$<CONFIG:Debug>:_ITERATOR_DEBUG_LEVEL_=2>)
execute_process(COMMAND git describe --always --tags
                COMPILE_DEFINITIONS OUTPUT_VARIABLE GIT_REPO_VERSION)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS GIT_REVISION="${GIT_REPO_VERSION}")


set(DEST_DIR ${PROJECT_SOURCE_DIR}/lib/${CMAKE_HOST_SYSTEM_NAME})

add_subdirectory(src)
